--- a/index.html
+++ b/index.html
@@ -6,19 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Welcome to Community Science Museum" />
     <title>Community Science Museum | Home</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/b318972c4d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header class="header-nav"></header>
+    <header class="header-nav">
+      <div class="header-logo-name-list">
+        <div class="header-logo">
+          <img src="/images/MuseumLogo.svg" alt="Museum Logo" />
+        </div>
+        <div class="header-name">
+          <p>Community</p>
+          <p>Science Museum</p>
+        </div>
+        <label for="hamburger-menu" title="Hamburger menu"
+          ><i class="fas fa-bars"></i
+        ></label>
+        <input type="checkbox" id="hamburger-menu" />
+        <nav class="nav-list">
+          <ul>
+            <li><a href="/index.html" class="active">Home</a></li>
+            <li><a href="/explore.html">Explore</a></li>
+            <li><a href="/exhibitions.html">Exhibition</a></li>
+            <li><a href="/visit.html">Visit</a></li>
+            <li><a href="/getinvolved.html">Get Involved</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main class="container">
       <section class="top-content_home">
         <div>
-          <img src="" alt="museum exhibition" />
+          <img
+            src="/images/exhibition-1863344_1920.jpg"
+            alt="museum exhibition"
+          />
           <h1>"Explore together"</h1>
           <p>
             Come join us at the Community Science Museum where we’re committed
             to making science accessible to all.
           </p>
-          <form action="">
+          <form action="/explore.html">
             <button type="submit" class="cta-explore">Read more</button>
           </form>
         </div>
@@ -33,7 +65,7 @@
             on the development of aeronautics and where the future lies in this
             exciting ‘space’.
           </p>
-          <img src="" alt="Astronaut in chair" />
+          <img src="/images/andrew-ruiz-348421.jpg" alt="Astronaut in chair" />
         </div>
         <div class="news-specific">
           <h3>Night in the Museum</h3>
@@ -43,6 +75,10 @@
             sleeping bag and get ready to rough it as we go exploring the
             wonders of science.
           </p>
+          <img
+            src="/images/roberto-nickson-396152.jpg"
+            alt="Large room with an elephant on display"
+          />
         </div>
         <div class="news-specific">
           <h3>Energetica Exhibition on Loan</h3>
@@ -54,9 +90,36 @@
             ‘Wind Island’ that shows how turbines are able to use and control
             wind to create power.
           </p>
+          <img
+            src="/images/william-bout-264826-(height-354).jpg"
+            alt="Artwork with sky in the background"
+          />
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer_hours-location">
+        <div class="footer_opening">
+          <p>Opening hours</p>
+        </div>
+        <div class="footer_hours-top">
+          <p>Monday: Closed</p>
+          <p>Tuesday: 10:00 – 16:00</p>
+          <p>Wednesday: 10:00 – 16:00</p>
+        </div>
+        <div class="footer_hours-bottom">
+          <p>Thursday: 10:00 – 16:00</p>
+          <p>Friday: 10:00 – 19:00</p>
+          <p>Saturday: 9:00 – 16:00</p>
+          <p>Sunday: 9:00 – 13:00</p>
+        </div>
+        <div>
+          <p>Location</p>
+        </div>
+        <div>
+          <p>The museum is located at Søndre Tollbodgate 11B, 9008 Tromsø.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
