--- a/explore.html
+++ b/explore.html
@@ -74,42 +74,51 @@
             gone home).
           </p>
         </div>
-        <div class="kids">
+        <div class="kids-top">
           <h3>For Kids</h3>
-          <p>
-            Are you a young person looking to learn more about science? Come on
-            down to our museum, there’s plenty to see and do. You can learn
-            about Newtonian physics from our bumper swing, or why not travel
-            back in time and meet our resident Woolly Mammoth? Our exhibits are
-            designed to be accessible for interested minds, so make sure you
-            come ready to learn and explore. We also have the Young Stars club
-            which meets once a week on a Saturday between 10:00 and 13:00 where
-            you’ll get to explore and experiment with our team of experts.
-            During the school holidays we run special holiday clubs where you
-            can join other children your age to go on a journey of discovery.
-            Each holiday we pick a new theme to explore. To find out more about
-            the holiday club and how you can join, send us a message.
-          </p>
+        </div>
+        <div class="kids">
+          <div class="kids-text">
+            <p>
+              Are you a young person looking to learn more about science? Come
+              on down to our museum, there’s plenty to see and do. You can learn
+              about Newtonian physics from our bumper swing, or why not travel
+              back in time and meet our resident Woolly Mammoth? Our exhibits
+              are designed to be accessible for interested minds, so make sure
+              you come ready to learn and explore. We also have the Young Stars
+              club which meets once a week on a Saturday between 10:00 and 13:00
+              where you’ll get to explore and experiment with our team of
+              experts. During the school holidays we run special holiday clubs
+              where you can join other children your age to go on a journey of
+              discovery. Each holiday we pick a new theme to explore. To find
+              out more about the holiday club and how you can join, send us a
+              message.
+            </p>
+          </div>
           <img
             src="/images/reading-2762010_1280.jpg"
             alt="Child sitting on books and reading a book"
           />
         </div>
-        <div class="teachers">
+        <div class="teachers-top">
           <h3>For teachers</h3>
+        </div>
+        <div class="teachers">
+          <div class="teachers-text">
+            <p>
+              As a community-driven museum, we want to work with schools to
+              create places of learning and exploring. Our team are on hand to
+              give your students guided tours of the museum, teach them in our
+              learning laboratory, and provide great video presentations that
+              will excite and inspire them. Please get in touch with us here to
+              find out more about our facilities and to arrange a time to bring
+              your students through for a visit.
+            </p>
+          </div>
           <img
             src="/images/teacher-2816112.jpg"
             alt="illustration of teacher waving at you the reader"
           />
-          <p>
-            As a community-driven museum, we want to work with schools to create
-            places of learning and exploring. Our team are on hand to give your
-            students guided tours of the museum, teach them in our learning
-            laboratory, and provide great video presentations that will excite
-            and inspire them. Please get in touch with us here to find out more
-            about our facilities and to arrange a time to bring your students
-            through for a visit.
-          </p>
         </div>
       </section>
     </main>
