--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     </header>
     <main class="container">
       <section class="top-content_home">
-        <div>
+        <div class="top-image_home">
           <img
             src="/images/exhibition-1863344_1920.jpg"
             alt="museum exhibition"
           />
+        </div>
+        <div class="top-text_home">
           <h1>"Explore together"</h1>
           <p>
             Come join us at the Community Science Museum where we’re committed
@@ -58,42 +60,57 @@
       <section class="news">
         <h2>News!</h2>
         <div class="news-specific">
-          <h3>Visiting Professor of Aeronautics</h3>
-          <p>
-            It is our pleasure to announce that Prof Sheila Widnall from the
-            Massachusetts Institute of Technology will be delivering 3 lectures
-            on the development of aeronautics and where the future lies in this
-            exciting ‘space’.
-          </p>
-          <img src="/images/andrew-ruiz-348421.jpg" alt="Astronaut in chair" />
+          <div class="news-text">
+            <h3>Visiting Professor of Aeronautics</h3>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering 3
+              lectures on the development of aeronautics and where the future
+              lies in this exciting ‘space’.
+            </p>
+          </div>
+          <div class="news-image">
+            <img
+              src="/images/andrew-ruiz-348421.jpg"
+              alt="Astronaut in chair"
+            />
+          </div>
         </div>
         <div class="news-specific">
-          <h3>Night in the Museum</h3>
-          <p>
-            Get your family together for an exciting night in the museum as you
-            sleep over beside dinosaurs and science displays. Bring your own
-            sleeping bag and get ready to rough it as we go exploring the
-            wonders of science.
-          </p>
-          <img
-            src="/images/roberto-nickson-396152.jpg"
-            alt="Large room with an elephant on display"
-          />
+          <div class="news-text">
+            <h3>Night in the Museum</h3>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays. Bring your
+              own sleeping bag and get ready to rough it as we go exploring the
+              wonders of science.
+            </p>
+          </div>
+          <div class="news-image">
+            <img
+              src="/images/roberto-nickson-396152.jpg"
+              alt="Large room with an elephant on display"
+            />
+          </div>
         </div>
         <div class="news-specific">
-          <h3>Energetica Exhibition on Loan</h3>
-          <p>
-            On loan from the NEMO Science Museum in Amsterdam, the Energetica
-            exhibition is coming to the Community Science Museum. It’s a series
-            of installations that allow visitors to experience the power of the
-            elements as we harness them. From solar energy powering lighting, to
-            ‘Wind Island’ that shows how turbines are able to use and control
-            wind to create power.
-          </p>
-          <img
-            src="/images/william-bout-264826-(height-354).jpg"
-            alt="Artwork with sky in the background"
-          />
+          <div class="news-text">
+            <h3>Energetica Exhibition on Loan</h3>
+            <p>
+              On loan from the NEMO Science Museum in Amsterdam, the Energetica
+              exhibition is coming to the Community Science Museum. It’s a
+              series of installations that allow visitors to experience the
+              power of the elements as we harness them. From solar energy
+              powering lighting, to ‘Wind Island’ that shows how turbines are
+              able to use and control wind to create power.
+            </p>
+          </div>
+          <div class="news-image">
+            <img
+              src="/images/william-bout-264826-(height-354).jpg"
+              alt="Artwork with sky in the background"
+            />
+          </div>
         </div>
       </section>
     </main>
