--- a/explore.html
+++ b/explore.html
@@ -40,11 +40,11 @@
     </header>
     <main class="container">
       <section class="top-content_explore">
-        <div>
-          <img
-            src="/images/people-219985_1280.jpg"
-            alt="person looking into microscope"
-          />
+        <img
+          src="/images/people-219985_1280.jpg"
+          alt="person looking into microscope"
+        />
+        <div class="top-content_explore-text">
           <h1>Researchers</h1>
           <p>
             Are you looking to get involved with our team of researchers and
