--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
     </header>
     <main class="container">
       <section class="top-content_home">
-        <div class="top-image_home">
+        <div>
           <img
             src="/images/exhibition-1863344_1920.jpg"
             alt="museum exhibition"
           />
-        </div>
-        <div class="top-text_home">
           <h1>"Explore together"</h1>
           <p>
             Come join us at the Community Science Museum where we’re committed
