--- a/exhibitions.html
+++ b/exhibitions.html
@@ -41,9 +41,11 @@
     <main class="container">
       <section class="top-content_exhibitions">
         <h1>Our exhibitions</h1>
-        <div class="exhibition-list">
+        <div class="exhibition-image-text">
           <img src="/images/celso-405219.jpg" alt="Different moon phases" />
           <h2>Cosmology</h2>
+        </div>
+        <div class="exhibition-list">
           <p>
             Are you looking to get involved with our team of researchers and
             academics? Our museum offers various ways for you to use our
@@ -52,12 +54,14 @@
             universities around the country.
           </p>
         </div>
-        <div class="exhibition-list">
+        <div class="exhibition-image-text">
           <img
             src="/images/mammoth-1257288_1920.jpg"
             alt="Display of mammoth skeleton"
           />
           <h2>Evolution</h2>
+        </div>
+        <div>
           <p>
             For centuries, philosophers and scientists have wrestled with the
             question of our origins. Where do we come from and how did we get
@@ -69,12 +73,14 @@
             Mammoth, the Dodos, and a number of dinosaurs too.
           </p>
         </div>
-        <div class="exhibition-list">
+        <div class="exhibition-image-text">
           <img
             src="/images/samuel-zeller-113381.jpg"
             alt="Half body human biology mannequin"
           />
           <h2>Biology and Medicine</h2>
+        </div>
+        <div>
           <p>
             From micro-organisms to the human body, major breakthroughs in
             biology are offering us unique insights into the great wonders of
@@ -86,12 +92,14 @@
             transplant.
           </p>
         </div>
-        <div class="exhibition-list">
+        <div class="exhibition-image-text">
           <img
             src="/images/scientific-2040795_1280.jpg"
             alt="Person sitting by a large machine"
           />
           <h2>Robotics and AI</h2>
+        </div>
+        <div>
           <p>
             The information revolution is here and robotics and artificial
             intelligence are the science of the future. From useful home
@@ -99,12 +107,14 @@
             here. You can even say hello and shake the hand of Rob the Robot.
           </p>
         </div>
-        <div class="exhibition-list">
+        <div class="exhibition-image-text">
           <img
             src="/images/scott-webb-102825-grass.jpg"
             alt="Grass in sunlight"
           />
           <h2>Ecology</h2>
+        </div>
+        <div>
           <p>
             As we learn more and more of the impact humans are having on the
             planet, the more important it becomes that scientists explore how to
