--- a/getinvolved.html
+++ b/getinvolved.html
@@ -40,15 +40,15 @@
     </header>
     <main class="container">
       <section class="top-content_get-involved">
-        <div>
-          <img
-            src="/images/billetto-editorial-334686.jpg"
-            alt="Person wearing VR headset and painting"
-          />
+        <img
+          src="/images/billetto-editorial-334686.jpg"
+          alt="Person wearing VR headset and painting"
+        />
+        <div class="get-involved_text">
           <h1>Get Involved</h1>
         </div>
       </section>
-      <section>
+      <section class="get-involved_content">
         <div>
           <h2>Support</h2>
           <p>
