--- a/visit.html
+++ b/visit.html
@@ -49,50 +49,54 @@
       </section>
       <section class="visit">
         <h2>Visit</h2>
-        <div>
-          <h3>Location</h3>
-          <p>The museum is located at Søndre Tollbodgate 11B, 9008 Tromsø.</p>
-        </div>
-        <div>
-          <h3>Admission</h3>
-          <p>The entrance is free for all.</p>
-          <p>
-            There are guided tours of the museum that leave every hour. These
-            tours are 70 NOK per person and include a handy printed guide of the
-            museum.
-          </p>
-          <p>
-            If you would like to organise a guided tour for your group of 6 or
-            more people, please contact us to arrange the tour.
-          </p>
-        </div>
-        <div>
-          <h3>Accessibility</h3>
-          <p>
-            The museum has wheelchair accessibility ramps. It also has audio
-            guides and braille display signs for the visually impaired.
-          </p>
-        </div>
-        <div>
-          <h3>Food and drink</h3>
-          <p>
-            There is a café attached to the museum where you can get light
-            lunches, soft drinks, coffee, snacks and more.
-          </p>
-        </div>
-        <div>
-          <h3>Opening hours</h3>
-          <p>Monday: Closed</p>
-          <p>Tuesday: 10:00 – 16:00</p>
-          <p>Wednesday: 10:00 – 16:00</p>
-          <p>Thursday: 10:00 – 16:00</p>
-          <p>Friday: 10:00 – 19:00</p>
-          <p>Saturday: 9:00 – 16:00</p>
-          <p>Sunday: 9:00 – 13:00</p>
-          <img
-            src="/images/samuel-zeller-158996.jpg"
-            alt="Child wearing VR headset"
-          />
+        <div class="visit-content">
+          <div>
+            <h3>Location</h3>
+            <p>The museum is located at Søndre Tollbodgate 11B, 9008 Tromsø.</p>
+          </div>
+          <div>
+            <h3>Admission</h3>
+            <p>The entrance is free for all.</p>
+            <p>
+              There are guided tours of the museum that leave every hour. These
+              tours are 70 NOK per person and include a handy printed guide of
+              the museum.
+            </p>
+            <p>
+              If you would like to organise a guided tour for your group of 6 or
+              more people, please contact us to arrange the tour.
+            </p>
+          </div>
+          <div>
+            <h3>Accessibility</h3>
+            <p>
+              The museum has wheelchair accessibility ramps. It also has audio
+              guides and braille display signs for the visually impaired.
+            </p>
+          </div>
+          <div>
+            <h3>Food and drink</h3>
+            <p>
+              There is a café attached to the museum where you can get light
+              lunches, soft drinks, coffee, snacks and more.
+            </p>
+          </div>
+          <div class="hours-text_image">
+            <div>
+              <h3>Opening hours</h3>
+              <p>Monday: Closed</p>
+              <p>Tuesday: 10:00 – 16:00</p>
+              <p>Wednesday: 10:00 – 16:00</p>
+              <p>Thursday: 10:00 – 16:00</p>
+              <p>Friday: 10:00 – 19:00</p>
+              <p>Saturday: 9:00 – 16:00</p>
+              <p>Sunday: 9:00 – 13:00</p>
+            </div>
+            <img
+              src="/images/samuel-zeller-158996.jpg"
+              alt="Child wearing VR headset"
+            />
+          </div>
         </div>
       </section>
     </main>
