--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
             src="/images/exhibition-1863344_1920.jpg"
             alt="museum exhibition"
           />
-          <h1>"Explore together"</h1>
-          <p>
-            Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all.
-          </p>
-          <form action="/explore.html">
-            <button type="submit" class="cta-explore">Read more</button>
-          </form>
+          <div class="top-content_home-text">
+            <h1>"Explore together"</h1>
+            <p>
+              Come join us at the Community Science Museum where we’re committed
+              to making science accessible to all.
+            </p>
+            <form action="/explore.html">
+              <button type="submit" class="cta-explore">Read more</button>
+            </form>
+          </div>
         </div>
       </section>
       <section class="news">
@@ -118,15 +120,13 @@
           <p>Opening hours</p>
         </div>
         <div class="footer_hours-top">
-          <p>Monday: Closed</p>
-          <p>Tuesday: 10:00 – 16:00</p>
-          <p>Wednesday: 10:00 – 16:00</p>
+          <p>Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00</p>
         </div>
         <div class="footer_hours-bottom">
-          <p>Thursday: 10:00 – 16:00</p>
-          <p>Friday: 10:00 – 19:00</p>
-          <p>Saturday: 9:00 – 16:00</p>
-          <p>Sunday: 9:00 – 13:00</p>
+          <p>
+            Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00 |
+            Sunday: 9:00-13:00
+          </p>
         </div>
         <div>
           <p>Location</p>
