--- a/visit.html
+++ b/visit.html
@@ -102,19 +102,17 @@
     </main>
     <footer>
       <div class="footer_hours-location">
-        <div>
+        <div class="footer_opening">
           <p>Opening hours</p>
         </div>
         <div class="footer_hours-top">
-          <p>Monday: Closed</p>
-          <p>Tuesday: 10:00 – 16:00</p>
-          <p>Wednesday: 10:00 – 16:00</p>
+          <p>Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00</p>
         </div>
         <div class="footer_hours-bottom">
-          <p>Thursday: 10:00 – 16:00</p>
-          <p>Friday: 10:00 – 19:00</p>
-          <p>Saturday: 9:00 – 16:00</p>
-          <p>Sunday: 9:00 – 13:00</p>
+          <p>
+            Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00 |
+            Sunday: 9:00-13:00
+          </p>
         </div>
         <div>
           <p>Location</p>
