--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Community</p>
           <p>Science Museum</p>
         </div>
-        <label for="hamburger-menu" title="Hamburger menu"
+        <label for="hamburger-menu" title="Hamburger menu" class="burger-menu"
           ><i class="fas fa-bars"></i
         ></label>
         <input type="checkbox" id="hamburger-menu" />
@@ -116,19 +116,21 @@
     </main>
     <footer>
       <div class="footer_hours-location">
-        <div class="footer_opening">
-          <p>Opening hours</p>
-        </div>
-        <div class="footer_hours-top">
-          <p>Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00</p>
-        </div>
-        <div class="footer_hours-bottom">
-          <p>
-            Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00 |
-            Sunday: 9:00-13:00
-          </p>
-        </div>
         <div>
+          <div class="footer_bold">
+            <p>Opening hours</p>
+          </div>
+          <div>
+            <p>
+              Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00
+            </p>
+            <p>
+              Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00
+              | Sunday: 9:00-13:00
+            </p>
+          </div>
+        </div>
+        <div class="footer_bold">
           <p>Location</p>
         </div>
         <div>
