--- a/getinvolved.html
+++ b/getinvolved.html
@@ -23,17 +23,17 @@
           <p>Community</p>
           <p>Science Museum</p>
         </div>
-        <label for="hamburger-menu" title="Hamburger menu"
+        <label for="hamburger-menu" title="Hamburger menu" class="burger-menu"
           ><i class="fas fa-bars"></i
         ></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav class="nav-list">
           <ul>
-            <li><a href="/index.html" class="active">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/explore.html">Explore</a></li>
             <li><a href="/exhibitions.html">Exhibition</a></li>
             <li><a href="/visit.html">Visit</a></li>
-            <li><a href="/getinvolved.html">Get Involved</a></li>
+            <li><a href="/getinvolved.html" class="active">Get Involved</a></li>
           </ul>
         </nav>
       </div>
@@ -89,19 +89,21 @@
     </main>
     <footer>
       <div class="footer_hours-location">
-        <div class="footer_opening">
-          <p>Opening hours</p>
-        </div>
-        <div class="footer_hours-top">
-          <p>Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00</p>
-        </div>
-        <div class="footer_hours-bottom">
-          <p>
-            Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00 |
-            Sunday: 9:00-13:00
-          </p>
-        </div>
         <div>
+          <div class="footer_bold">
+            <p>Opening hours</p>
+          </div>
+          <div>
+            <p>
+              Monday: Closed | Tuesday: 10:00-16:00 | Wednesday: 10:00-16:00
+            </p>
+            <p>
+              Thursday: 10:00-16:00 | Friday: 10:00-19:00 | Saturday: 9:00-16:00
+              | Sunday: 9:00-13:00
+            </p>
+          </div>
+        </div>
+        <div class="footer_bold">
           <p>Location</p>
         </div>
         <div>
