--- a/visit.html
+++ b/visit.html
@@ -17,7 +17,9 @@
     <header class="header-nav">
       <div class="header-logo-name-list">
         <div class="header-logo">
-          <img src="/images/MuseumLogo.svg" alt="Museum Logo" />
+          <a href="/index.html"
+            ><img src="/images/MuseumLogo.svg" alt="Museum Logo"
+          /></a>
         </div>
         <div class="header-name">
           <p>Community</p>
@@ -124,6 +126,8 @@
         </div>
         <div>
           <p>The museum is located at Søndre Tollbodgate 11B, 9008 Tromsø.</p>
+          <p>Phone: +47 555 55 555</p>
+          <p>Email: CommunityScienceMuseum@csm.com</p>
         </div>
       </div>
     </footer>
