--- a/exhibitions.html
+++ b/exhibitions.html
@@ -43,7 +43,7 @@
     <main class="container">
       <section class="top-content_exhibitions">
         <h1>Our exhibitions</h1>
-        <div class="exhibition-image-text">
+        <div class="exhibition-image-text_top">
           <img src="/images/celso-405219.jpg" alt="Different moon phases" />
           <h2>Cosmology</h2>
         </div>
