--- a/exhibitions.html
+++ b/exhibitions.html
@@ -63,7 +63,7 @@
           />
           <h2>Evolution</h2>
         </div>
-        <div>
+        <div class="exhibition-list">
           <p>
             For centuries, philosophers and scientists have wrestled with the
             question of our origins. Where do we come from and how did we get
@@ -82,7 +82,7 @@
           />
           <h2>Biology and Medicine</h2>
         </div>
-        <div>
+        <div class="exhibition-list">
           <p>
             From micro-organisms to the human body, major breakthroughs in
             biology are offering us unique insights into the great wonders of
@@ -101,7 +101,7 @@
           />
           <h2>Robotics and AI</h2>
         </div>
-        <div>
+        <div class="exhibition-list">
           <p>
             The information revolution is here and robotics and artificial
             intelligence are the science of the future. From useful home
@@ -116,7 +116,7 @@
           />
           <h2>Ecology</h2>
         </div>
-        <div>
+        <div class="exhibition-list">
           <p>
             As we learn more and more of the impact humans are having on the
             planet, the more important it becomes that scientists explore how to
